# Trust-Interpreter

./: .gitignore  CMakeLists.txt  README.md  Type.h  driver.cpp  driver.hh  location.hh  main.cpp  parser.cpp  parser.gv  parser.hh  parser.y  scanner.cpp  scanner.h  scanner.l
Examples/: eratosthenes.in  fibonacci.in  ternary_search.in  z_function.in
help/: Expression.h  ForwardDeclarations.h  IDTable.cpp  IDTable.h  Identifier.cpp  Identifier.h  Program.cpp  Program.h  Statement.h  Statements.cpp  Statements.h  VariableDeclInit.cpp  VariableDeclInit.h  VariableDeclaration.cpp  VariableDeclaration.h  Visitor.cpp  Visitor.h  VisitorDependencies.h
help/Expressions/: AndExpression.cpp  AndExpression.h  AsExpression.cpp  AsExpression.h  DivExpression.cpp  DivExpression.h  EqualExpression.cpp  EqualExpression.h  Expression.h  FunctionCall.cpp  FunctionCall.h  GreaterEqExpression.cpp  GreaterEqExpression.h  GreaterExpression.cpp  GreaterExpression.h  IDExpression.cpp  IDExpression.h  LessEqExpression.cpp  LessEqExpression.h  LessExpression.cpp  LessExpression.h  MinusExpression.cpp  MinusExpression.h  ModExpression.cpp  ModExpression.h  MulExpression.cpp  MulExpression.h  NotEqualExpression.cpp  NotEqualExpression.h  NotExpression.cpp  NotExpression.h  OrExpression.cpp  OrExpression.h  PlusExpression.cpp  PlusExpression.h  SizeExpression.cpp  SizeExpression.h  SubscriptionExpression.cpp  SubscriptionExpression.h  UnaryMinusExpression.cpp  (+5 more)
help/Functions/: FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionDeclarationList.cpp  FunctionDeclarationList.h  FunctionsTable.cpp  FunctionsTable.h  ParamList.cpp  ParamList.h
help/Identifiers/: IDTable.cpp  IDTable.h  Identifier.cpp  Identifier.h
help/InterpretationExceptions/: InterpretationExceptions.cpp  InterpretationExceptions.h
help/Statements/: Iterator.h  (+34 more)
(+25 files in other folders)
